--- a/shopping-list/style.css
+++ b/shopping-list/style.css
@@ -8,30 +8,112 @@ body {
    background-color: #3B3F45;
    color: #EB7E7F;
    font-family: Trebuchet, Arial, sans-serif;
+   font-size: 1.2em;
    border: 10px solid white;
+   min-height: 100%;
 }
 
-header, p {
+header {
    text-align: center;
    margin: 0px;
-   padding: 5px 0;
+   padding-bottom: 10px;
    background-color:#4A4F56;
 }
+
 h1 {
-   padding-top: 10px;
+   padding: 10px 0;
 }
-p {
-   padding: 10px;
-}
-ul {
-   margin: 1% 30%;
+
+form {
+   width: 60%;
+   margin-left: auto;
+   margin-right: auto;
+   padding-bottom: 5%;
+   transition: all .1s ease-in;
 }
 .wrapper {
    list-style: none;
 }
+ul {
+   margin: 20px 0;
+}
+li {
+   padding: 20px 0 20px 10px;
+   color: white;
+   font-size: 1.2em;
+   cursor: pointer;
+}
+label {
+   padding-left: 10px;
+}
+.shoplist_salt::after {
+   content: "(for the next lessons about CSS)";
+   font-size: 14px;
+   padding-left: 10px;
+}
+.shoplist_apple::after {
+   content: "(for more CSS manipulations)";
+   font-size: 14px;
+   padding-left: 10px;
+}
+.shoplist_orang::after {
+   content: "(because they are awesome)";
+   font-size: 14px;
+   padding-left: 10px;
+}
+.shoplist_plates::after {
+   content: "(hm... they always disappear)";
+   font-size: 14px;
+   padding-left: 10px;
+}
+.shoplist_sake::after {
+   content: "^_^ (for my friends)";
+   font-size: 14px;
+   padding-left: 10px;
+}
+
 .wrapper li:nth-child(odd) {
    background:#88839E;
 }
 .wrapper li:nth-child(even) {
    background: #736F86;
+}
+
+ul li:nth-child(odd), 
+ul li:nth-child(even) {
+   color: #ffffff;
+   border-top: 2px solid transparent;
+   border-bottom: 2px solid transparent;
+}
+
+ul li:hover {
+   background-color: #625E77;
+   border-top: 2px solid #ffffff;
+   border-bottom: 2px solid #ffffff;
+}
+ul li:active {
+   background-color: #EB7E7F;
+   border-top: 2px solid #ffffff;
+   border-bottom: 2px solid #ffffff;
+}
+
+.wrapper [type="checkbox"] {
+   width: 20px;
+   height: 20px;
+   vertical-align: middle;
+}
+.wrapper [type="checkbox"]:checked + span {
+   text-decoration: line-through;
+   color: #9CA0B5;
+}
+
+button {
+   width: 100%;
+   padding: 20px;
+   background-color: #4A4F56;
+   color: #EB7E7F;
+   border: none;
+   font-size: 1.2em;
+   padding: 20px;
+   outline: none;
 }
