--- a/shopping-list/style.css
+++ b/shopping-list/style.css
@@ -20,15 +20,15 @@ header {
    background-color:#4A4F56;
 }
 
-h1 {
+/* h1 {
    padding: 10px 0;
-}
+} */
 
 form {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
-   padding-bottom: 4%;
+   padding-bottom: 5%;
    transition: all .1s ease-in;
 }
 
@@ -80,13 +80,13 @@ ul li:nth-child(even) {
    border-bottom: 2px solid transparent;
 }
 
-ul li:hover {
+.wrapper li:hover {
    background-color: #625E77;
    border-top: 2px solid #ffffff;
    border-bottom: 2px solid #ffffff;
 }
 
-ul li:active {
+.wrapper li:active {
    background-color: #EB7E7F;
    border-top: 2px solid #ffffff;
    border-bottom: 2px solid #ffffff;
@@ -111,4 +111,5 @@ button {
    font-size: 1.2em;
    padding: 20px;
    outline: none;
+   cursor: pointer;
 }
